# RESTServer

./: .gitmodules  CMakeLists.txt  README.md  connector_manager.cpp  controller.cpp  curl_wrapper.cpp  main.cpp  server_logic.cpp  tasker_manager.cpp  url.cpp  web_server.cpp
include/: connector_manager.h  controller.h  server_logic.h  tasker_manager.h  web_server.h
