cmake_minimum_required(VERSION 3.10)
project(server_logic)
set(CMAKE_THREAD_LIBS_INIT "-lpthread")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pthread ")
set(NAME_OUT_FILE ${PROJECT_NAME})
find_package(nlohmann_json REQUIRED)
include_directories("include")
find_package(OpenSSL REQUIRED)
add_library(${NAME_OUT_FILE} SHARED tasker_manager.cpp )
if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
  set(NAME_OUT_FILE ${PROJECT_NAME}_exe)
  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
  add_executable(${NAME_OUT_FILE} main.cpp tasker_manager.cpp )
else()
set_target_properties(${NAME_OUT_FILE} PROPERTIES
LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib
)
  message("This is a submodule.")
endif()
target_link_libraries(${NAME_OUT_FILE} ${OPENSSL_SSL_LIBRARY} ${OPENSSL_CRYPTO_LIBRARY} -lm -pthread nlohmann_json::nlohmann_json)
